--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 1.8rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  height: 100vh;
+  width: 100%;
+  padding: 4rem;
+}
+
+.hero {
+  width: 100%;
+  height: 30rem;
+  background-image: url("./images/caleb-george-pH88tHG-1yw-unsplash.jpg");
+  background-position: bottom;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+#search {
+  padding-left: 4rem;
+  width: 60%;
+  height: 4rem;
+  border-radius: 10px;
+  background-image: url("./images/search-outline.svg");
+  background-size: 25px 25px;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-position-x: 5px;
+}
+
+nav {
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 4rem;
+  float: left;
+}
+
+#uk {
+  color: #780000;
+}
+
+.results-label {
+  margin: 1rem;
+  font-size: 2rem;
+  width: 75%;
+}
+.dashboard {
+  display: flex;
+}
+
+.buttons {
+  width: 25%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#filter,
+#sort {
+  margin: 1rem;
+  height: 3rem;
+  width: 5rem;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#filter:hover,
+#sort:hover {
+  cursor: pointer;
+}
+
+#filter img,
+#sort img {
+  height: 1rem;
+  width: 1rem;
+  margin-left: 0.5rem;
+}
+
+#sort-menu,
+#filter-menu {
+  background: gainsboro;
+  position: absolute;
+  flex-direction: column;
+  z-index: 10;
+  top: 45rem;
+  height: 15rem;
+  width: 15rem;
+  padding: 1rem;
+}
+
+#filter-menu {
+  right: 10rem;
+  height: 40rem;
+}
+
+#filter-menu label {
+  margin-left: 1rem;
+}
+
+.menu-title {
+  border: 1px solid black;
+  background: lightgray;
+}
+
+#sort-menu p,
+#filter-menu p {
+  font-size: 1.5rem;
+  width: 100%;
+}
+
+#filter-menu p {
+  margin: 1rem 0;
+  border-bottom: 1px solid black;
+}
+
+#done {
+  margin-top: 1rem;
+}
+
+#sort-menu p {
+  height: 33%;
+  padding: 1rem;
+}
+
+.sort-options:hover {
+  cursor: pointer;
+  background: darkblue;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.star-filter-container,
+.genre-filter-container {
+  display: flex;
+  margin-bottom: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.star-filter-label {
+  display: flex;
+}
+
+.star-filter-label img {
+  height: 1rem;
+  width: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 3rem;
   }
-  to {
-    transform: rotate(360deg);
+  .hero {
+    height: 10rem;
+  }
+
+  #search {
+    height: 3rem;
+  }
+  #filter,
+  #sort {
+    margin: 0.5rem 0 0.5rem 0.5rem;
+    height: 2rem;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5px;
   }
 }
